--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a library for integrating amazon dash button presses into a node project",
   "main": "index.js",
   "scripts": {
-    "test": "npm test/test.js"
+    "test": "mocha test/test.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,9 @@
   "homepage": "https://github.com/hortinstein/dash-button",
   "dependencies": {
     "arpjs": "^1.0.0",
-    "pcap": "^2.0.1"
+    "mocha": "^2.3.0",
+    "pcap": "^2.0.1",
+    "should": "^7.1.0",
+    "underscore": "^1.8.3"
   }
 }
