--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "mocha test/test.js"
   },
+  "bin":{
+    "findbutton": "./bin/findbutton"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/hortinstein/dash-button"
@@ -24,10 +27,15 @@
   },
   "homepage": "https://github.com/hortinstein/dash-button",
   "dependencies": {
+    "pcap": "^2.0.1",
+    "underscore": "^1.8.3"
+  },
+  "devDependencies": {
     "arpjs": "^1.0.0",
     "mocha": "^2.3.0",
     "pcap": "^2.0.1",
     "should": "^7.1.0",
     "underscore": "^1.8.3"
   }
+
 }
