--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dash-button",
+  "name": "node-dash-button",
   "version": "0.0.1",
   "description": "a library for integrating amazon dash button presses into a node project",
   "main": "index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hortinstein/dash-button"
+    "url": "https://github.com/hortinstein/node-dash-button"
   },
   "keywords": [
     "amazon",
@@ -23,9 +23,9 @@
   "author": "hortinstein",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/hortinstein/dash-button/issues"
+    "url": "https://github.com/hortinstein/node-dash-button/issues"
   },
-  "homepage": "https://github.com/hortinstein/dash-button",
+  "homepage": "https://github.com/hortinstein/node-dash-button",
   "dependencies": {
     "pcap": "^2.0.1",
     "underscore": "^1.8.3"
