--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-dash-button",
-  "version": "0.0.1",
-  "description": "a library for integrating amazon dash button presses into a node project",
+  "version": "0.0.11",
+  "description": "a module for integrating amazon dash button presses into a node project",
   "main": "index.js",
   "scripts": {
     "test": "mocha test/test.js"
