--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a module for integrating amazon dash button presses into a node project",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/test.js"
+    "test": "sudo mocha test/test.js"
   },
   "bin":{
     "findbutton": "./bin/findbutton"
