--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "mocha": "^2.3.0",
     "pcap": "^2.0.1",
     "should": "^7.1.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "sinon": "*"
   }
 
 }
