getting closer to getting mocks to work

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "pcap": "^2.0.1",
     "should": "^7.1.0",
     "underscore": "^1.8.3",
-    "sinon": "*"
+    "sinon": "*",
+    "mockery": "*"
   }
 
 }
