testing is closer

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "should": "^7.1.0",
     "underscore": "^1.8.3",
     "sinon": "*",
-    "mockery": "*"
+    "mockery": "*",
+    "ip":"*"
   }
 
 }
