--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-
 language: node_js
 
 sudo: false
@@ -6,12 +5,12 @@ sudo: false
 before_install:
   - npm update -q
 
-addons:
-  apt:
-    packages:
-    - libpcap-dev
-
 node_js:
+  - "4.2"
+  - "4.1"
+  - "4.0"
   - "0.12"
   - "0.11"
-  - "iojs-v2.0.0"
+  - "0.10"
+  - "node"
+  - "iojs"
