--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/hortinstein/node-dash-button",
   "dependencies": {
-    "pcap": "github:mranney/node_pcap",
+    "pcap": "^2.0.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
