--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-dash-button",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "a module for integrating amazon dash button presses into a node project",
   "main": "index.js",
   "scripts": {
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "arpjs": "^1.0.0",
+    "autochecker": "^0.5.1",
     "coveralls": "^2.11.4",
     "istanbul": "0.3.22",
     "mocha": "^2.3.0",
